# daysoff-api

./: .env.example  .gitignore  Cargo.toml  README.md  vercel.json
api/: main.rs
migrations/: 0001_init.sql  0002_settings.sql  0003_branding_extras.sql  0004_approval_halfdays_company_days.sql  0005_cancel_requests.sql  0006_company_half_days.sql
src/: auth.rs  dates.rs  db.rs  error.rs  lib.rs  models.rs
src/routes/: absences.rs  auth.rs  company_days.rs  mod.rs  overview.rs  settings.rs  users.rs
