[package]
name = "bv-vacation-api"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Friction-free vacation day tracker API"

[lib]
name = "bv_vacation_api"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "api/main.rs"

[[bin]]
name = "local"
path = "src/bin/local.rs"

[dependencies]
vercel_runtime = { version = "2.4", features = ["axum"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "derive",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
